2003-01-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in: Fix typo in previous change.

2003-01-21  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (MKOCTFILE_INCFLAGS): Skip -I$(includedir) if
	$(includedir) is /usr/include.

2003-01-16  Mumit Khan  <khan@nanotech.wisc.edu>

	* Makeconf.in (SED): Export to subshells.

2003-01-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Don't bother with compiler flags for
	explicit/no-implicit template instantiation.

2003-01-11  Paul Kienzle <pkienzle@users.sf.net>

	* configure.in, Makeconf.in: Allow setting of BUILD_LDFLAGS.

2003-01-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* autogen.sh: Use --force for autoconf and autoheader.

2003-01-04  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (CONF_DISTFILES): Include acx_blas.m4 and
	acx_lapack.m4.

	* configure.in (BUILD_CC, BUILD_CFLAGS, BUILD_CXX,
	BUILD_CXXFLAGS): Kluge for Sun C/C++.

2003-01-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Default value of BUILD_CXX is $CXX, not g++.
	(AH_BOTTOM): Define __USE_STD_IOSTREAM if using Compaq C++ compiler.
	For compiler/linker options, use -Wl,OPT instead of -Xlinker OPT.
	Check for -ieee option for the C and C++ compilers on alpha systems.

2003-01-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Fail on all gcc 1.x and 2.x versions.

2002-12-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (OCTAVE_LOCAL_BUFFER): New macro.

2002-12-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mkoctfile.in: Include $LIBOCTINTERP in the stand alone link command.
	Define LIBOCTAVE, LIBOCTINTERP, LIBCRUFT, LIBREADLINE using -lLIB.

2002-12-17  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (do-script-install, do-script-uninstall):
	New macros, used in Makefiles in scripts subdirectory.
	(do-script-install): Use new scripts/mkpkgadd script to construct
	PKG_ADD files.

2002-12-03  Nix  <nix@esperi.demon.co.uk>
